[package]
name = "nln"
version = "0.1.7"
edition = "2024"
repository = "https://github.com/glennib/nln"
description = "Remove trailing newlines and carriage returns from stdin"
license = "MIT"
authors = ["Glenn Bitar <glennbitar@gmail.com>"]

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
